# turboabr

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_panel_templates.py  0003_plan_description.py  0004_service_disabled_reason.py
app/: main.py
app/bot/: middlewares.py
app/bot/handlers/: __init__.py  admin.py  user.py
app/bot/keyboards/: admin.py  common.py
app/core/: config.py  security.py
app/db/: models.py  session.py
app/integrations/: pasarguard.py  payments.py
app/jobs/: billing.py  payments.py  scheduler.py
app/services/: catalog.py  menu.py  notifications.py  payments.py  service_lifecycle.py  services.py  settings.py  users.py  wallet.py
